# Dashboard

./: CMakeLists.txt  README.md
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run_backend.sh
backend/doc/kbhit()_files/: shBrushCpp.html  shCore.html  style.html  wp-embed.html  wp-emoji-release.html
backend/include/: DatabaseConnection.h  HttpServer.h  database_connection.h  http_server.h  lws.h  lws_protocol.h  util.h
backend/scripts/: regenerate_db.sh  test_db.sql
backend/src/: DatabaseConnection.cpp  HttpServer.cpp  database_connection.c  http_server.c  lws.c  lws_protocol.c  main.c  main.cpp  test.c  util.c
doc/: kbhit().html
doc/kbhit()_files/: shCore.css  shThemeMidnight.css
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  LoginForm.tsx  index.html  ws.js
include/: HttpServer.h
scripts/: regenerate_db.sh
src/: DatabaseConnection.cpp  HttpServer.cpp
yem-app/: Cargo.toml
yew-frontend/: Cargo.toml
